--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ https://www.tooplate.com/view/2115-marvel
                             <img src="images/project/Code.png" class="img-fluid" alt="project image">
                             <div>
                               <p>
-                              CG Spectrum learning project C++
+                                CG Spectrum C++ Code Project in Unreal Engine. Prominent features include, Kinematics, AI, 3C's Work, and Interfaces and Data Tables
                               <p>
                               </div>
                           </div>
