--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ https://www.tooplate.com/view/2115-marvel
 
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/project/treywilsonphoto (1).jpg" class="faceimg" alt="svg image">
+                        <img src="images/project/treywilsonphoto (1).jpg" class="faceimg">
                     </div>
                 </div>
 
