--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ https://www.tooplate.com/view/2115-marvel
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <a href="https://roflworld.itch.io/"><img src="images/project/RetroBig.jpg" class="img-fluid" alt="project image"></a>
+                            <img src="images/project/RetroBig.jpg" class="img-fluid" alt="project image"></a>
                             <div>
                               <p>
                                 Solo project inspired by The Legend of Zelda.  Unreal Engine action combat platformer. Featuring Boss Fights, Enemy AI, Custom Retro Shader, Stealth, and more.  
