--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ https://www.tooplate.com/view/2115-marvel
                                 <span>2018</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>Ennviromental Studies</span><small>Florida State University</small></h3>
+                                <h3><span>Environmental Studies</span><small>Florida State University</small></h3>
                                 <p>Studied abroad in Valencia, Spain during spring, summer, and fall 2013</p>
                             </div>
                         </div>
